EmissionFactorMatching/objects/OtherEmssnFctrSet.object
<CustomObject>
    <fields>
        <fullName>EmissionsFactorUpdateYear__c</fullName>
        <label>Emissions Factor Update Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MasterEmissionsSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MasterEmissionsSet</label>
        <referenceTo>OtherEmssnFctrSet</referenceTo>
        <relationshipLabel>Other Emissions Factor Sets</relationshipLabel>
        <relationshipName>Other_Emissions_Factor_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Emissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Emissions</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>